Remake of the maps and planets

--- a/game/html/mine.html
+++ b/game/html/mine.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ore Information</title>
+	<title>Ore Overload II</title>
 	<link rel="stylesheet" type="text/css" href="../css/body.css">
 	<link rel="stylesheet" type="text/css" href="../css/infobar.css">
 </head>
@@ -10,7 +10,7 @@
         <div id="info-div">
             <div id="map-select">
                 <div id="map-button">
-                    <a href="map_mine.html" draggable="false"><span>&larr; Back</span></a>
+                    <a href="../html/map_mine.html" draggable="false"><span>&larr; Back</span></a>
                 </div>
             </div>
             
