--- a/game/html/planets/map_titanus.html
+++ b/game/html/planets/map_titanus.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container">
-        <img id="map" draggable="false" src="../../img/map/map.png">
+        <img id="map" draggable="false" src="../img/map/map.png">
         <div class="marker-button" id="marker-1"><button class="marker-button-b" onclick="window.location.href = '../../html/mine.html'">Mine 1</button></div>
         <div class="marker-button" id="marker-2"><button class="marker-button-b" onclick="window.location.href = '../../html/stockmarket.html'">Stock Market</button></div>
         <div class="marker-button" id="marker-3"><button class="marker-button-b" onclick="window.location.href = '../../html/warehouse.html'">Warehouse</button></div>
