--- a/game/html/warehouse.html
+++ b/game/html/warehouse.html
@@ -12,7 +12,7 @@
         <div id="info-div">
             <div id="map-select">
                 <div id="map-button">
-                    <a href="map_mine.html" draggable="false"><span>&larr; Back</span></a>
+                    <a href="../html/planets/map_novaria.html" draggable="false"><span>&larr; Back</span></a>
                 </div>
             </div>
             
@@ -224,7 +224,107 @@
 				</table>
 			</div>
 		</div>
-		<div class="grid-item"></div>
+		<div class="grid-item">
+			<div class="grid-title">
+				<span class="grid-title-text">Helion</span>
+			</div>
+			<div class="grid-table-div">
+				<table class="ore-table">
+					<thead>
+						<tr>
+							<th>Ore Icon</th>
+							<th>Ore Type</th>
+							<th>Amount</th>
+						</tr>
+						</thead>
+						<tbody>
+						<tr>
+							<td>
+								<img src="../img/template.png" alt="Sandstone" draggable="false">
+							</td>
+							<td>
+								<span>Sandstone</span>
+							</td>
+							<td class="ore-amount" id="sandstone-ore-amount">0</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="../img/template.png" alt="Dune Glass" draggable="false">
+							</td>
+							<td>
+								<span>Dune Glass</span>
+							</td>
+							<td class="ore-amount" id="dune-glass-ore-amount">0</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="../img/template.png" alt="Iron Sand" draggable="false">
+							</td>
+							<td>
+								<span>Iron Sand</span>
+							</td>
+							<td class="ore-amount" id="iron-sand-ore-amount">0</td>
+						</tr>
+							<td>
+								<img src="../img/template.png" alt="Scorchstone" draggable="false">
+							</td>
+							<td>
+								<span>Scorchstone</span>
+							</td>
+							<td class="ore-amount" id="scorchstone-ore-amount">0</td>
+						</tr>
+							<td>
+								<img src="../img/template.png" alt="Sandstorm Crystal" draggable="false">
+							</td>
+							<td>
+								<span>Sandstorm Crystal</span>
+							</td>
+							<td class="ore-amount" id="sandstorm-crystal-ore-amount">0</td>
+						</tr>
+							<td>
+								<img src="../img/template.png" alt="Sunstone" draggable="false">
+							</td>
+							<td>
+								<span>Sunstone</span>
+							</td>
+							<td class="ore-amount" id="sunstone-ore-amount">0</td>
+						</tr>
+							<td>
+								<img src="../img/template.png" alt="Sand Ruby" draggable="false">
+							</td>
+							<td>
+								<span>Sand Ruby</span>
+							</td>
+							<td class="ore-amount" id="sand-ruby-ore-amount">0</td>
+						</tr>
+							<td>
+								<img src="../img/template.png" alt="Desert Emerald" draggable="false">
+							</td>
+							<td>
+								<span>Desert Emerald</span>
+							</td>
+							<td class="ore-amount" id="desert-emerald-ore-amount">0</td>
+						</tr>
+							<td>
+								<img src="../img/template.png" alt="Sandstone Marble" draggable="false">
+							</td>
+							<td>
+								<span>Sandstone Marble</span>
+							</td>
+							<td class="ore-amount" id="sandstone-marble-ore-amount">0</td>
+						</tr>
+							<td>
+								<img src="../img/template.png" alt="Dusty Quartz" draggable="false">
+							</td>
+							<td>
+								<span>Dusty Quartz</span>
+							</td>
+							<td class="ore-amount" id="dusty-quartz-ore-amount">0</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 		<div class="grid-item"></div>
 		<div class="grid-item"></div>
 		<div class="grid-item"></div>
