--- a/game/html/map_space.html
+++ b/game/html/map_space.html
@@ -5,16 +5,22 @@
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../css/body.css">
 	<link rel="stylesheet" type="text/css" href="../css/infobar.css">
-	<link rel="stylesheet" type="text/css" href="../css/map.css">
+	<link rel="stylesheet" type="text/css" href="../css/map/map_space.css">
 </head>
 <body>
     <div id="container">
         <img id="map" draggable="false" src="../img/map/map.png">
-        <div class="marker-button" id="marker-1"><button class="marker-button-b">Planet 1</button></div>
-        <div class="marker-button" id="marker-2"><button class="marker-button-b">Planet 2</button></div>
-        <div class="marker-button" id="marker-3"><button class="marker-button-b">Planet 3</button></div>
-        <div class="marker-button" id="marker-4"><button class="marker-button-b">Planet 4</button></div>
+        <div class="marker-button" id="marker-1"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_novaria.html'">Novaria</button></div>
+        <div class="marker-button" id="marker-2"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_aethera.html'">Aethera</button></div>
+        <div class="marker-button" id="marker-3"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_helion.html'">Helion</button></div>
+        <div class="marker-button" id="marker-4"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_terra_nova.html'">Terra Nova</button></div>
+        <div class="marker-button" id="marker-5"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_arcadia.html'">Arcadia</button></div>
+        <div class="marker-button" id="marker-6"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_cerulea.html'">Cerulea</button></div>
+        <div class="marker-button" id="marker-7"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_xenos.html'">Xenos</button></div>
+        <div class="marker-button" id="marker-8"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_titanus.html'">Titanus</button></div>
+        <div class="marker-button" id="marker-9"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_eridanus.html'">Eridanus</button></div>
+        <div class="marker-button" id="marker-10"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_aurius.html'">Aurius</button></div>
     </div>
 </body>
-<script type="text/javascript" src="../js/map.js"></script>
+<script type="text/javascript" src="../js/map/map_space.js"></script>
 </html>
