--- a/game/html/shop_buy.html
+++ b/game/html/shop_buy.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Buy and Sell Divs</title>
+        <title>Buy Items</title>
 	<link rel="stylesheet" type="text/css" href="../css/body.css">
 	<link rel="stylesheet" type="text/css" href="../css/infobar.css">
     <link rel="stylesheet" type="text/css" href="../css/shop.css">
@@ -12,7 +12,7 @@
             <div id="info-div">
                 <div id="map-select">
                     <div id="map-button">
-                        <a href="../html/planets/map_novaria.html" draggable="false"><span>&larr; Back</span></a>
+                        <a href="shop.html" draggable="false"><span>&larr; Back</span></a>
                     </div>
                 </div>
                 
@@ -20,19 +20,9 @@
     
             </div>
         </div>
-        <div class="container">
-            <div class="left" id="buy">
-                <span class="arrow" id="left-arrow">&#8672;</span><span class="text" id="left-text">Buy</span>
-            </div>
-            <div class="right" id="sell">
-                <span class="text" id="right-text">Sell</span><span class="arrow" id="right-arrow">&#8674;</span>
-            </div>
-        </div>
     </body>
-    <script type="module" src="../js/shop.js"></script>
+    <script type="module" src="../js/shop_buy.js"></script>
     <script type="module" src="../js/storage.js"></script>
-    <script type="module" src="../js/loadPage.js"></script>
-    <script type="module" src="../js/back.js"></script>
     <script type="module" src="../data/oredata.js"></script>
     <script type="module" src="../data/playerdata.js"></script>
 </html>
