Added sun and planets are now in a circle

--- a/game/html/map_space.html
+++ b/game/html/map_space.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <img id="map" draggable="false" src="../img/map/space_background.png">
+        <div class="marker-button" id="marker-sun"><button class="marker-button-s"></button></div>
         <div class="marker-button" id="marker-1"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_novaria.html'"><p>Novaria</p></button></div>
         <div class="marker-button" id="marker-2"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_aethera.html'"><p>Aethera</p></button></div>
         <div class="marker-button" id="marker-3"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_helion.html'"><p>Helion</p></button></div>
@@ -21,5 +22,6 @@
         <div class="marker-button" id="marker-9"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_eridanus.html'"><p>Eridanus</p></button></div>
         <div class="marker-button" id="marker-10"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_aurius.html'"><p>Aurius</p></button></div>
     </div>
-</body> 
+</body>
+<script src="../js/map/map_space.js"></script>
 </html>
