--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <h1>Rerouting...</h1>
-    <a href="./game/start.html">&#8674; Click here if your not rerouted &#8672;</a>
+    <a href="./game/start.html">&#8674; Click here if you're not rerouted &#8672;</a>
 </body>
 <script>
     window.addEventListener("load", (event) => {
