--- a/game/html/map_space.html
+++ b/game/html/map_space.html
@@ -11,17 +11,19 @@
     <div id="container">
         <img id="map" draggable="false" src="../img/map/space_background.png">
         <div class="marker-button" id="marker-sun"><button class="marker-button-s"></button></div>
-        <div class="marker-button" id="marker-1"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_novaria.html'"><p>Novaria</p></button></div>
-        <div class="marker-button" id="marker-2"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_aethera.html'"><p>Aethera</p></button></div>
-        <div class="marker-button" id="marker-3"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_helion.html'"><p>Helion</p></button></div>
-        <div class="marker-button" id="marker-4"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_terra_nova.html'"><p>Terra Nova</p></button></div>
-        <div class="marker-button" id="marker-5"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_arcadia.html'"><p>Arcadia</p></button></div>
-        <div class="marker-button" id="marker-6"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_cerulea.html'"><p>Cerulea</p></button></div>
-        <div class="marker-button" id="marker-7"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_xenos.html'"><p>Xenos</p></button></div>
-        <div class="marker-button" id="marker-8"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_titanus.html'"><p>Titanus</p></button></div>
-        <div class="marker-button" id="marker-9"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_eridanus.html'"><p>Eridanus</p></button></div>
-        <div class="marker-button" id="marker-10"><button class="marker-button-b" onclick="window.location.href='../html/planets/map_aurius.html'"><p>Aurius</p></button></div>
+        <div class="marker-button" id="marker-1" data-planet="novaria"><button class="marker-button-b"><p>Novaria</p></button></div>
+        <div class="marker-button" id="marker-2" data-planet="aethera"><button class="marker-button-b"><p>Aethera</p></button></div>
+        <div class="marker-button" id="marker-3" data-planet="helion"><button class="marker-button-b"><p>Helion</p></button></div>
+        <div class="marker-button" id="marker-4" data-planet="terra_nova"><button class="marker-button-b"><p>Terra Nova</p></button></div>
+        <div class="marker-button" id="marker-5" data-planet="arcadia"><button class="marker-button-b"><p>Arcadia</p></button></div>
+        <div class="marker-button" id="marker-6" data-planet="cerulea"><button class="marker-button-b"><p>Cerulea</p></button></div>
+        <div class="marker-button" id="marker-7" data-planet="xenos"><button class="marker-button-b"><p>Xenos</p></button></div>
+        <div class="marker-button" id="marker-8" data-planet="titanus"><button class="marker-button-b"><p>Titanus</p></button></div>
+        <div class="marker-button" id="marker-9" data-planet="eridanus"><button class="marker-button-b"><p>Eridanus</p></button></div>
+        <div class="marker-button" id="marker-10" data-planet="aurius"><button class="marker-button-b"><p>Aurius</p></button></div>
     </div>
 </body>
-<script src="../js/map/map_space.js"></script>
+<script type="module" src="../js/map/map_space.js"></script>
+<script type="module" src="../js/map/savePlanet.js"></script>
+<script type="module" src="../js/storage.js"></script>
 </html>
