--- a/404.html
+++ b/404.html
@@ -4,33 +4,92 @@
 	<title>404 Page Not Found</title>
 	<link rel="stylesheet" type="text/css" href="game/css/body.css">
     <style>
-        .body {
-            width: 100%;
-            height: 100%;
+        * {
+            font-family: Google sans, Arial;
+            }
+
+        html, body {
+            margin: 0;
+            padding: 0;
+        }
+
+        .flex-container {
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow: hidden;
+            height: 100vh;
+            color: white;
+            background-color: #222222;
+        }
+
+        .text-center {
+            text-align: center;
+        }
+
+        h1,
+        h3 {
+            margin: 10px;
+            cursor: default;
+        }
+
+        h3 {
+            margin-top: 25px;
+        }
+
+        .fade-in {
+            animation: fadeIn 2s ease infinite;
         }
 
         h1 {
-            text-align: center;
-            border-color: #FFA12D;
-            font-size: 48px;
+            font-size: 8em;
+            transition: font-size 200ms ease-in-out;
+            border-bottom: 1px dashed white;
         }
-        
-        a {
-            text-align: center;
-            text-decoration: none;
-            color: #FFA12D;
-            border: 1px solid;
-            border-color: #FFA12D;
-            font-size: 18px;
+
+        span#digit1 { animation-delay: 200ms; }
+        span#digit2 { animation-delay: 300ms; }
+        span#digit3 { animation-delay: 400ms; }
+
+        button {
+            border: 1px solid white;
+            background: transparent;
+            outline: none;
+            padding: 10px 20px;
+            font-size: 1.1rem;
+            font-weight: bold;
+            color: white;
+            text-transform: uppercase;
+            transition: all 0.2s ease-in-out;
+            margin: 20px 0;
+        }
+
+        button:hover {
+            background-color: white;
+            cursor: pointer;
+            color: #222222;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            };
+            100% {
+                opacity: 1;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>Rerouting...</h1>
-    <a href="./game/start.html">&#8674; Click here if you're not rerouted &#8672;</a>
+    <div class="flex-container">
+        <div class="text-center">
+            <h1>
+                <span class="fade-in" id="digit1">4</span>
+                <span class="fade-in" id="digit2">0</span>
+                <span class="fade-in" id="digit3">4</span>
+            </h1>
+            <h3 class="fadeIn">PAGE NOT FOUND</h3>
+            <button type="button" name="button" onclick="window.location.href='./game/start.html'">Return To Home</button>
+        </div>
+    </div>
 </body>
 </html>
