--- a/404.html
+++ b/404.html
@@ -88,7 +88,7 @@
                 <span class="fade-in" id="digit3">4</span>
             </h1>
             <h3 class="fadeIn">PAGE NOT FOUND</h3>
-            <button type="button" name="button" onclick="window.location.href='./game/start.html'">Return To Home</button>
+            <button type="button" name="button" onclick="window.location.href='index.html'">Return To Home</button>
         </div>
     </div>
 </body>
