Added Dev tools

--- a/game/html/map_space.html
+++ b/game/html/map_space.html
@@ -21,6 +21,8 @@
         <div class="marker-button" id="marker-8" data-planet="titanus"><button class="marker-button-b"><p>Titanus</p></button></div>
         <div class="marker-button" id="marker-9" data-planet="eridanus"><button class="marker-button-b"><p>Eridanus</p></button></div>
         <div class="marker-button" id="marker-10" data-planet="aurius"><button class="marker-button-b"><p>Aurius</p></button></div>
+
+        <div class="dev-div" id="dev"></div>
     </div>
 </body>
 <script type="module" src="../js/map/map_space.js"></script>
