--- a/game/html/mine.html
+++ b/game/html/mine.html
@@ -10,7 +10,7 @@
         <div id="info-div">
             <div id="map-select">
                 <div id="map-button">
-                    <a href="../html/map_mine.html" draggable="false"><span>&larr; Back</span></a>
+                    <a id="info-back" draggable="false"><span>&larr; Back</span></a>
                 </div>
             </div>
             
@@ -23,4 +23,5 @@
 <script type="module" src="../js/storage.js"></script>
 <script type="module" src="../data/oredata.js"></script>
 <script type="module" src="../data/playerdata.js"></script>
+<script type="module" src="../js/back.js"></script>
 </html>
