--- a/game/html/planets/map_novaria.html
+++ b/game/html/planets/map_novaria.html
@@ -15,8 +15,9 @@
         <div class="marker-button" id="marker-4"><button class="marker-button-b" onclick="window.location.href = '../../html/stockmarket.html'">Stock Market</button></div>
         <div class="marker-button" id="marker-5"><button class="marker-button-b" onclick="window.location.href = '../../html/warehouse.html'">Warehouse</button></div>
         <div class="marker-button" id="marker-6"><button class="marker-button-b" onclick="window.location.href = '../../html/shop.html'">Shop</button></div>
-        <div class="marker-button" id="marker-7"><button class="marker-button-b" onclick="window.location.href = '../../html/map_space.html'">Go to Space Map</button></div>
+        <div class="marker-button" id="marker-7"><button class="marker-button-b" onclick="window.location.href = '../../html/casino.html'">Casino</button></div>
+        <div class="marker-button" id="marker-8"><button class="marker-button-b" onclick="window.location.href = '../../html/map_space.html'">Go to Space Map</button></div>
     </div>
 </body>
-<script type="text/javascript" src="../../js/map/map_mine.js"></script>
+<script type="module" src="../../js/map/map_mine.js"></script>
 </html>
