--- a/game/html/shop.html
+++ b/game/html/shop.html
@@ -12,7 +12,7 @@
             <div id="info-div">
                 <div id="map-select">
                     <div id="map-button">
-                        <a href="../html/planets/map_novaria.html" draggable="false"><span>&larr; Back</span></a>
+                        <a id="info-back" draggable="false"><span>&larr; Back</span></a>
                     </div>
                 </div>
                 
@@ -31,8 +31,7 @@
     </body>
     <script type="module" src="../js/shop.js"></script>
     <script type="module" src="../js/storage.js"></script>
-    <script type="module" src="../js/loadPage.js"></script>
-    <script type="module" src="../js/back.js"></script>
     <script type="module" src="../data/oredata.js"></script>
     <script type="module" src="../data/playerdata.js"></script>
+    <script type="module" src="../js/back.js"></script>
 </html>
