--- a/game/html/stockmarket.html
+++ b/game/html/stockmarket.html
@@ -12,7 +12,7 @@
         <div id="info-div">
             <div id="map-select">
                 <div id="map-button">
-                    <a href="../html/planets/map_novaria.html" draggable="false"><span>&larr; Back</span></a>
+                    <a id="info-back" draggable="false"><span>&larr; Back</span></a>
                 </div>
             </div>
             
@@ -248,6 +248,7 @@
     <script type="text/javascript" src="../js/stockmarketlistdropdown.js"></script>
     <script type="module" src="../js/storage.js"></script>
     <script type="module" src="../data/playerdata.js"></script>
+    <script type="module" src="../data/stockmarketdata.js"></script>
     <script type="module" src="../data/stockmarketdata.js"></script>
   </body>
 </html>
