--- a/game/html/warehouse.html
+++ b/game/html/warehouse.html
@@ -12,7 +12,7 @@
         <div id="info-div">
             <div id="map-select">
                 <div id="map-button">
-                    <a href="../html/planets/map_novaria.html" draggable="false"><span>&larr; Back</span></a>
+                    <a id="back" draggable="false"><span>&larr; Back</span></a>
                 </div>
             </div>
             
