Working on Dev Tools

--- a/game/dev/dev.html
+++ b/game/dev/dev.html
@@ -48,4 +48,5 @@
 <script type="module" src="../data/oredata.js"></script>
 <script type="module" src="../data/playerdata.js"></script>
 <script type="module" src="dev.js"></script>
+<script type="module" src="hash.js"></script>
 </html>
