Added New Casino Wheel WIP and added shop items for buy

--- a/game/html/casino.html
+++ b/game/html/casino.html
@@ -34,8 +34,9 @@
         </div>
     </div>
 </body>
-<script type="module" src="../js/mine.js"></script>
+<script type="module" src="../../js/updateMoney.js"></script>
 <script type="module" src="../js/storage.js"></script>
+<script type="module" src="../js/casino.js"></script>
 <script type="module" src="../data/planetdata.js"></script>
 <script type="module" src="../data/playerdata.js"></script>
 </html>
