--- a/game/html/casino_games/casino_wheelspin.html
+++ b/game/html/casino_games/casino_wheelspin.html
@@ -4,6 +4,7 @@
 	<title>Ore Overload II</title>
 	<link rel="stylesheet" type="text/css" href="../../css/body.css">
 	<link rel="stylesheet" type="text/css" href="../../css/infobar.css">
+	<link rel="stylesheet" type="text/css" href="../../css/casino_wheelspin.css">
 </head>
 <body>
 	<div class="info">
@@ -18,8 +19,39 @@
 
         </div>
     </div>
+    <div class="container">
+        <div class="arrow"></div>
+        <div class="wheel">
+            <div class="slice">
+                <span>Prize 1</span>
+            </div>
+            <div class="slice">
+                <span>Prize 2</span>
+            </div>
+            <div class="slice">
+                <span>Prize 3</span>
+            </div>
+            <div class="slice">
+                <span>Prize 4</span>
+            </div>
+            <div class="slice">
+                <span>Prize 5</span>
+            </div>
+            <div class="slice">
+                <span>Prize 6</span>
+            </div>
+            <div class="slice">
+                <span>Prize 7</span>
+            </div>
+            <div class="slice">
+                <span>Prize 8</span>
+            </div>
+        </div>
+    </div>
+      
 </body>
-<script type="module" src="../../js/mine.js"></script>
+<script type="module" src="../../js/casino_wheelspin.js"></script>
+<script type="module" src="../../js/updateMoney.js"></script>
 <script type="module" src="../../js/storage.js"></script>
 <script type="module" src="../../data/oredata.js"></script>
 <script type="module" src="../../data/playerdata.js"></script>
