--- a/game/html/mine.html
+++ b/game/html/mine.html
@@ -20,6 +20,7 @@
     </div>
 </body>
 <script type="module" src="../js/mine.js"></script>
+<script type="module" src="../js/updateMoney.js"></script>
 <script type="module" src="../js/storage.js"></script>
 <script type="module" src="../data/oredata.js"></script>
 <script type="module" src="../data/playerdata.js"></script>
