--- a/game/html/shop_buy.html
+++ b/game/html/shop_buy.html
@@ -4,6 +4,7 @@
 	<title>Ore Overload II</title>
 	<link rel="stylesheet" type="text/css" href="../css/body.css">
 	<link rel="stylesheet" type="text/css" href="../css/infobar.css">
+	<link rel="stylesheet" type="text/css" href="../css/shop_buy.css">
 </head>
 <body>
 	<div class="info">
@@ -18,8 +19,74 @@
 
         </div>
     </div>
+    <div class="shop-section" id="novaria-ores">
+        <p class="shop-section-p">Novaria Ores</p>
+        <div class="grid-container">
+            <div class="grid-item" id="item1" data-planet-ore="novaria, cryonite, ore">
+                <img src="../img/template.png" alt="Item 1" class="item-image">
+                <h3 class="item-title">Item 1</h3>
+                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <button class="buy-button" data-item-id="item1">Buy</button>
+            </div>
+            <div class="grid-item" id="item2" data-planet-ore="novaria, glacialite, ore">
+                <img src="../img/template.png" alt="Item 2" class="item-image">
+                <h3 class="item-title">Item 2</h3>
+                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <button class="buy-button" data-item-id="item2">Buy</button>
+            </div>
+            <div class="grid-item" id="item3" data-planet-ore="novaria, crystaline-ice, ore">
+                <img src="../img/template.png" alt="Item 3" class="item-image">
+                <h3 class="item-title">Item 3</h3>
+                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <button class="buy-button" data-item-id="item3">Buy</button>
+            </div>
+            <div class="grid-item" id="item4" data-planet-ore="novaria, frost-iron, ore">
+                <img src="../img/template.png" alt="Item 4" class="item-image">
+                <h3 class="item-title">Item 4</h3>
+                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <button class="buy-button" data-item-id="item4">Buy</button>
+            </div>
+            <div class="grid-item" id="item5" data-planet-ore="novaria, frostbite, ore">
+                <img src="../img/template.png" alt="Item 5" class="item-image">
+                <h3 class="item-title">Item 5</h3>
+                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <button class="buy-button" data-item-id="item5">Buy</button>
+            </div>
+            <div class="grid-item" id="item6" data-planet-ore="novaria, blizzardstone, ore">
+                <img src="../img/template.png" alt="Item 6" class="item-image">
+                <h3 class="item-title">Item 6</h3>
+                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <button class="buy-button" data-item-id="item6">Buy</button>
+            </div>
+            <div class="grid-item" id="item7" data-planet-ore="novaria, snow-quartz, ore">
+                <img src="../img/template.png" alt="Item 7" class="item-image">
+                <h3 class="item-title">Item 7</h3>
+                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <button class="buy-button" data-item-id="item7">Buy</button>
+            </div>
+            <div class="grid-item" id="item8" data-planet-ore="novaria, auroraite, ore">
+                <img src="../img/template.png" alt="Item 8" class="item-image">
+                <h3 class="item-title">Item 8</h3>
+                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <button class="buy-button" data-item-id="item8">Buy</button>
+            </div>
+            <div class="grid-item" id="item9" data-planet-ore="novaria, ice-diamond, ore">
+                <img src="../img/template.png" alt="Item 9" class="item-image">
+                <h3 class="item-title">Item 9</h3>
+                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <button class="buy-button" data-item-id="item9">Buy</button>
+            </div>
+            <div class="grid-item" id="item10" data-planet-ore="novaria, cryosium, ore">
+                <img src="../img/template.png" alt="Item 10" class="item-image">
+                <h3 class="item-title">Item 10</h3>
+                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <button class="buy-button" data-item-id="item10">Buy</button>
+            </div>
+        </div>
+    </div>
 </body>
-<script type="module" src="../js/mine.js"></script>
+<script type="module" src="../js/shop_buy.js"></script>
+<script type="module" src="../js/updateMoney.js"></script>
 <script type="module" src="../js/storage.js"></script>
 <script type="module" src="../data/oredata.js"></script>
 <script type="module" src="../data/playerdata.js"></script>
