--- a/game/html/stockmarket.html
+++ b/game/html/stockmarket.html
@@ -246,6 +246,7 @@
     </table>
     <script type="module" src="../js/stockmarket.js"></script>
     <script type="text/javascript" src="../js/stockmarketlistdropdown.js"></script>
+    <script type="module" src="../js/updateMoney.js"></script>
     <script type="module" src="../js/storage.js"></script>
     <script type="module" src="../data/playerdata.js"></script>
     <script type="module" src="../data/stockmarketdata.js"></script>
