--- a/game/html/warehouse.html
+++ b/game/html/warehouse.html
@@ -334,6 +334,7 @@
 		<div class="grid-item"></div>
 	</div>
 </body>
+<script type="module" src="../js/updateMoney.js"></script>
 <script type="module" src="../js/warehouse.js"></script>
 <script type="module" src="../js/storage.js"></script>
 <script type="module" src="../data/oredata.js"></script>
