--- a/game/html/factory.html
+++ b/game/html/factory.html
@@ -19,7 +19,7 @@
         </div>
     </div>
 </body>
-<script type="module" src="../js/mine.js"></script>
+<script type="module" src="../js/updateMoney.js"></script>
 <script type="module" src="../js/storage.js"></script>
 <script type="module" src="../data/oredata.js"></script>
 <script type="module" src="../data/playerdata.js"></script>
