--- a/game/html/shop.html
+++ b/game/html/shop.html
@@ -29,7 +29,7 @@
             </div>
         </div>
     </body>
-    <script type="module" src="../js/shop.js"></script>
+    <script type="module" src="../js/shop/shop.js"></script>
     <script type="module" src="../js/storage.js"></script>
     <script type="module" src="../data/oredata.js"></script>
     <script type="module" src="../data/playerdata.js"></script>
