Fixed Stockmarket button bug and added more store stuff

--- a/game/html/shop_buy.html
+++ b/game/html/shop_buy.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/body.css">
 	<link rel="stylesheet" type="text/css" href="../css/infobar.css">
 	<link rel="stylesheet" type="text/css" href="../css/shop_buy.css">
+	<link rel="stylesheet" type="text/css" href="../css/shop_buy.css">
 </head>
 <body>
 	<div class="info">
@@ -17,6 +18,22 @@
             
             <h1 id="money">◈ 0</h1>
 
+        </div>
+    </div>
+    <div class="popup">
+        <div class="popup-content">
+            <div class="popup-header">
+                <h2 id="popup-title"></h2>
+                <span class="close-btn" id="close-btn-id">&times;</span>
+            </div>
+            <div class="popup-body">
+                <img id="popup-img" src="" alt="">
+                <p id="popup-message"></p>
+                <span class="input-number-decrement" id="input-number-decrement-id">-</span><!--
+                --><input class="input-number" id="input-number-id" type="text" value="1" min="0" max="10"><!--
+                --><span class="input-number-increment" id="input-number-increment-id">+</span>
+                <button id="buy-item">Buy</button>
+            </div>
         </div>
     </div>
     <div class="shop-section" id="novaria-ores">
