--- a/game/html/stockmarket.html
+++ b/game/html/stockmarket.html
@@ -251,5 +251,6 @@
     <script type="module" src="../data/playerdata.js"></script>
     <script type="module" src="../data/stockmarketdata.js"></script>
     <script type="module" src="../data/stockmarketdata.js"></script>
+    <script type="module" src="../js/back.js"></script>
   </body>
 </html>
